--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		<meta name="theme-color" content="#2d2d2d" />
 		<meta
 			name="description"
-			content="A cool terminal-like portfolio website."
+			content="Sky-Development"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
